--- a/mtams/mtams-war/web/forexCreate.xhtml
+++ b/mtams/mtams-war/web/forexCreate.xhtml
@@ -247,7 +247,7 @@
 
                                 </h:panelGrid>                         
 
-                                <p:commandButton value="Submit" ajax="false" actionListener="#{foreignBean.createForm()}" />
+                                <p:commandButton value="Submit" ajax="false" actionListener="#{foreignBean.createForm()}" disabled="true" />
                             </p:panel>  
                         </p:tab>  
 
