--- a/mtams/mtams-war/web/applicationEdit.xhtml
+++ b/mtams/mtams-war/web/applicationEdit.xhtml
@@ -14,7 +14,7 @@
                 <h:form id="editForm">
 
                     <p:panel id="editApplicationPanel" header="Your Application">
-
+                        <p:button value="Back" outcome="#{appBean.viewThis()}" />
                         <h4>Please click on the value you wish to edit</h4>
                         <p:messages autoUpdate="true"  closable="true" globalOnly="true" />
 
