--- a/mtams/mtams-war/web/messageAdmin.xhtml
+++ b/mtams/mtams-war/web/messageAdmin.xhtml
@@ -12,7 +12,7 @@ and open the template in the editor.
 
     <body>
 
-        <ui:composition template="./template/template.xhtml">
+        <ui:composition template="template/template.xhtml">
             <ui:define name="content">
 
                 <h:form>       
