--- a/mtams/mtams-war/web/tests/include.test.xhtml
+++ b/mtams/mtams-war/web/tests/include.test.xhtml
@@ -13,14 +13,23 @@
             <ui:define name="content">
                 <div> 
                     <p> test </p>
+                    <!--
+                    <p>request.getPathInfo() :#{request.getPathInfo()}</p>
+                    <p>request.getPathTranslated()   :#{request.getPathTranslated()}</p>
+                    <p>request.contextPath :#{request.contextPath}</p>
+                    <p>request.getRealPath("/") :#{request.getRealPath("/")}</p>
+                    <p>request.getRealPath("request.contextPath") :#{request.getRealPath(request.contextPath)}</p>
+                    <p>request.getRealPath("/") :#{request.getRealPath("/")}</p>
+                    <p>request.getServletPath()  :#{request.getServletPath()    }</p>
+                    -->
                 </div>
                 <ui:remove>
                     <!--
                     
 
                 <ui:include src="/WEB-INF/jspf/currency.xhtml" >
-                                        -->
-                    
+                    -->
+
                 </ui:remove>
                 <ui:include src="../template/currencyDialog.xhtml" >
                     <!--
@@ -36,15 +45,52 @@
                 </ui:include>
                 <h:form id="formID" styleClass="test"> 
                     <p>Currency List count : #{dataLookUpBean.currencyCount}</p>
-                    <p:commandButton value="Show" type="button" onclick="testWvar.show()" />
-                    <p:commandButton value="Hide" type="button" onclick="testWvar.hide()" />
+                    <p:commandButton value="Show currency" type="button" onclick="testWvar.show()" />
+                    <p:commandButton value="Hide currency" type="button" onclick="testWvar.hide()" />
                     <br />
                     <p:outputLabel id="testID" value="string currency object : #{dataLookUpBean.selectedCurrencyString}" />
                     <br />
                     <p:outputLabel id="testID2" value="string currency object : #{dataLookUpBean.aCurrencySelection}" />
                 </h:form>
-            </ui:define>
 
+
+                <div><p>Country Region City</p>
+                    <ui:include src="../template/countryDialog.xhtml" >
+                        <!--
+                        The ID of the element on which the ajax should update 
+                        -->
+                        <ui:param name="updateIDParam" value=":CRCVal:countryID" />
+                        <ui:param name="updateIDParam2" value=":CRCVal:countryID2" />
+                        <!--
+                        The java script name of the dialog needs to be unique
+                        for each dialog used on a page. 
+                        -->
+                        <ui:param name="widgetVarParam" value="CountryWvar" />
+                    </ui:include>
+
+                    <h:form id="CRCVal" styleClass="test"> 
+                        <p>Currency List count : #{dataLookUpBean.countryCount}</p>
+                        <p:commandButton value="Show Country" type="button" onclick="CountryWvar.show()" />
+                        <p:commandButton value="Hide Country" type="button" onclick="CountryWvar.hide()" />
+                        <br />
+                        <p:outputLabel id="countryID" value="string Country object : #{dataLookUpBean.countryString}" />
+                        <br />
+                        <p:outputLabel id="Region" value="string Region object : #{dataLookUpBean.regionyString}" />
+                        <br />
+                        <p:outputLabel id="City" value="string City object : #{dataLookUpBean.cityString}" />
+                        <br />
+                        <p:outputLabel id="countryID2" value="string CRCS country object : #{dataLookUpBean.countrySelectionRef}" />
+                        <br />
+                        <p:outputLabel id="CCRSregion" value="string CRCS region object : #{dataLookUpBean.regionySelectionRef}" />
+                        <br /> 
+                        <p:outputLabel id="CCRScity" value="string CRCS region object : #{dataLookUpBean.citySelectionRef}" />
+                        <br /> 
+                        <p:commandButton value="Show" type="button" onclick="dlgCRC.show()" />
+                        <p:commandButton value="Hide" type="button" onclick="dlgCRC.hide()" />
+                    </h:form>
+
+                </div>
+            </ui:define>
         </ui:composition>
 
     </body>
